--- a/.env
+++ b/.env
@@ -22,12 +22,19 @@ LOG_LEVEL=debug
 # DB_USERNAME= lrandjai
 # DB_PASSWORD=  JW8dOFMZl87VZJZujjzM8GBMMZ9N5uS_
 
+# DB_CONNECTION= pgsql
+#DB_HOST= 34.101.250.5
+#DB_PORT= 5432
+#DB_DATABASE= kampus-gratis-develop
+#DB_USERNAME= postgres
+#DB_PASSWORD=  "D^Eos<=#hyusu{P8"
+
 DB_CONNECTION= pgsql
-DB_HOST= 34.101.250.5
+DB_HOST= rosie.db.elephantsql.com
 DB_PORT= 5432
-DB_DATABASE= kampus-gratis-develop
-DB_USERNAME= postgres
-DB_PASSWORD=  "D^Eos<=#hyusu{P8"
+DB_DATABASE= kgizfusz
+DB_USERNAME= kgizfusz
+DB_PASSWORD= 6tc1FhcLvdmibwYhjzZsshQrtAHTSf1X
 
 FIREBASE_CREDENTIALS = firebase_credential.json
 
@@ -63,10 +70,3 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-<<<<<<< HEAD
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-=======
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
->>>>>>> 1189187540889fb2b57e00cf3f1588454cfdbaff
